@@ -20,6 +20,23 @@ define host {
 	notification_period none
 }
 
+define host {
+	host_name host3
+	alias   host3 test
+	address 192.168.2.3
+	max_check_attempts 2
+	check_period    none
+	contacts        nagiosadmin
+	notification_interval 60
+	notification_period none
+	hostgroups	+hosts-with-master-service
+}
+
+define hostgroup {
+	hostgroup_name	hosts-with-master-service
+	alias	Hosts running a master service
+}
+
 define service {
 	host_name	host1
 	service_description Dummy service
@@ -51,6 +68,38 @@ define service {
 	name	service-distributed
 	check_command	!set_to_stale
 	register	0
+}
+
+define service {
+        hostgroup_name  hosts-with-master-service
+        service_description     master-service
+        check_command   check_me!master service
+        max_check_attempts      5
+        check_interval  15
+        retry_interval  1
+        check_period    none
+        notification_interval   65
+        notification_period     none
+        contacts        nagiosadmin
+}
+
+define service {
+	host_name       host3
+	service_description	dependent-service
+	check_command	check_me!dependent service
+	max_check_attempts	5
+	check_interval	15
+	retry_interval	1
+	check_period	none
+	notification_interval	65
+	notification_period	none
+	contacts	nagiosadmin
+        servicegroups   +services-depending-on-master-service
+}
+
+define servicegroup {
+	servicegroup_name	services-depending-on-master-service
+	alias	Servicegroup for services depending on a "master" service on the same host
 }
 
 define command {
@@ -124,4 +173,11 @@ define contactgroup {
 define serviceescalation {
 	host_name *
 	service_description *,!Dummy service
+}
+
+define servicedependency {
+	service_description	master-service
+	dependent_servicegroup_name	services-depending-on-master-service
+	execution_failure_criteria	n
+	notification_failure_criteria	c,u
 }
